[project]
name = "python-tools-demo"
version = "0.1.0"
description = "A collection of beautiful and practical Python tools"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Developer", email = "dev@example.com" }
]
dependencies = [
    "rich==13.7.1",
    "requests==2.31.0",
    "qrcode[pil]==7.4.2",
    "beautifulsoup4==4.12.3",
    "feedparser==6.0.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []